Bug fixes and cleanup.
- Folder tag optional in XML: remove IsFolder class variable from Playlist class and use FolderContentCount instead
- new Integer deprecated: ise Integer.valueOf instead
- bug: crash in family playlist expansion foa a vanilla playlist (no parent)
- bug: crash if Date tag missing in XML: make optional
- bug: Year tag in XML can be integer or string: convert string variants to int